--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <section class="buttons-section">
             <button onclick="printAsPDF()"><i class="fas fa-file-pdf"></i> Print as PDF</button>
             <button onclick="printAsPNG()"><i class="fas fa-file-image"></i> Download as PNG</button>
+             <p> Enable Desktop mode before clicking Download as PNG button </p>
         </section>
     </div>
 
